# fantastic-auth

./: .gitignore  AGENTS.md  CODE_IMPROVEMENTS.md  COMPREHENSIVE_REVIEW.md  COMPREHENSIVE_REVIEW_FINAL.md  COMPREHENSIVE_SYSTEM_REVIEW.md  Cargo.toml  FEATURE_REVIEW.md  FINAL_FIXES_SUMMARY.md  FINAL_SECURITY_REVIEW.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  ROADMAP_TO_100.md  RUST_API_COMPREHENSIVE_REVIEW.md  RUST_API_REVIEW.md  RUST_API_REVIEW_2.md  RUST_API_REVIEW_3.md  SECURITY_FIXES_SUMMARY.md  SECURITY_MODULES_SUMMARY.md  SECURITY_REVIEW_FINAL.md  WEB_UI_CHANGES_SUMMARY.md  WEB_UI_COMPREHENSIVE_REVIEW.md
docs/: AI_SECURITY.md  (+15 more)
fantasticauth-cli/: Cargo.toml  README.md
fantasticauth-cli/src/: config.rs  main.rs
fantasticauth-cli/src/commands/: auth.rs  plugin.rs  users.rs
fantasticauth-cli/src/commands/migrate/: auth0.rs  clerk.rs  firebase.rs
plugins/example-plugin/: Cargo.toml
plugins/example-plugin/src/: lib.rs
plugins/ldap-plugin/: Cargo.toml
plugins/ldap-plugin/src/: lib.rs
plugins/webhook-plugin/: Cargo.toml
plugins/webhook-plugin/src/: lib.rs
vault-cli/: Cargo.toml  README.md
vault-cli/src/: client.rs  config.rs  errors.rs  main.rs
vault-cli/src/commands/: auth.rs  config.rs  migrate.rs  mod.rs  orgs.rs  ping.rs  plugin.rs  sessions.rs  users.rs
vault-cli/src/commands/migrate/: types.rs
vault-core/: Cargo.toml
vault-core/src/: error.rs  lib.rs
vault-core/src/ai/: anomaly_detection.rs  behavioral.rs  features.rs  ml_models.rs  mod.rs  risk_engine.rs  threat_detection.rs
vault-core/src/auth/: biometric.rs  email.rs  mfa.rs  mod.rs  oauth.rs  password.rs  token_store.rs
vault-core/src/billing/: customer.rs  mod.rs  stripe.rs
vault-core/src/crypto/: jwt.rs  mod.rs  tokens.rs
vault-core/src/db/: actions.rs  biometric.rs  log_streams.rs  mfa.rs  mod.rs  oidc.rs  organizations.rs  projects.rs  tenant_admins.rs  users.rs
vault-core/src/email/: mod.rs  templates_i18n.rs
vault-core/src/hosted/: mod.rs
vault-core/src/models/: mod.rs  project.rs  session.rs  user.rs
vault-core/src/plugin/: hooks.rs  loader.rs  mod.rs  registry.rs  types.rs  wasm.rs
vault-core/src/security/: bot_protection.rs  mod.rs
vault-core/src/sms/: mod.rs  twilio.rs  whatsapp.rs
vault-core/src/webauthn/: challenge.rs  credentials.rs  mod.rs  verification.rs
vault-core/src/webhooks/: events.rs  mod.rs  signatures.rs
vault-core/src/zk/: encryption.rs  key_derivation.rs  mod.rs  proofs.rs  recovery.rs  secure_computation.rs
vault-core/tests/: rls_policies_test.rs
vault-server/: Cargo.toml  Dockerfile
vault-server/resources/i18n/: ar.ftl  fr.ftl  it.ftl  pt.ftl  ru.ftl  zh.ftl
vault-server/src/: audit.rs  config.rs  main.rs  metrics.rs  observability.rs  state.rs  validation.rs
vault-server/src/actions/: mod.rs
vault-server/src/ai/: middleware.rs  mod.rs  risk_api.rs  threat_api.rs
vault-server/src/analytics/: metrics.rs  mod.rs  models.rs  repository.rs
vault-server/src/auth/: account_linking.rs  anonymous.rs  mod.rs  step_up.rs
vault-server/src/auth/web3/: signature.rs  siwe.rs
vault-server/src/background/: analytics.rs  audit_rotation.rs  data_encryption_migration.rs  log_streams.rs  mod.rs  webhook_worker.rs  webhooks.rs
vault-server/src/billing/: mod.rs  stripe.rs  types.rs  webhooks.rs
vault-server/src/bulk/: export.rs  import.rs  mod.rs
vault-server/src/consent/: manager.rs  mod.rs  templates.rs
vault-server/src/consent/templates/: ccpa_privacy_policy.md  gdpr_privacy_policy.md
vault-server/src/db/: mod.rs  password_history.rs  webhooks.rs
vault-server/src/domains/: custom.rs  custom_repository.rs  custom_service.rs  repository.rs  service.rs  verification.rs
vault-server/src/federation/: broker.rs  home_realm.rs  trust.rs
vault-server/src/federation/providers/: ldap_provider.rs  mod.rs  saml_provider.rs
vault-server/src/i18n/: admin.rs  middleware.rs  mod.rs
vault-server/src/ldap/: mod.rs  sync.rs
vault-server/src/m2m/: api_keys.rs  client_credentials.rs  mod.rs  service_account.rs
vault-server/src/mfa/: common.rs  email.rs  errors.rs  mod.rs  sms.rs  totp.rs  whatsapp.rs
vault-server/src/mfa/push/: apns.rs  fcm.rs  mod.rs  polling.rs
vault-server/src/middleware/: admin_roles.rs  audit.rs  auth.rs  bot_protection.rs  consent.rs  geo.rs  m2m_auth.rs  mod.rs  permission.rs  rate_limit.rs  security.rs  tenant.rs
vault-server/src/migration/: auth0.rs  cognito.rs  csv_importer.rs  firebase.rs  mod.rs  progress.rs
vault-server/src/monitoring/: metrics.rs
vault-server/src/oidc/idp/: endpoints.rs  grants.rs  mod.rs
vault-server/src/permissions/: checker.rs  mod.rs  repository.rs
vault-server/src/routes/: hosted.rs  mod.rs  oidc.rs
vault-server/src/routes/admin/: analytics.rs  api_keys.rs  audit_logs.rs  bulk.rs  consent.rs  custom_domains.rs  directory.rs  domains.rs  federation.rs  groups.rs  impersonation.rs  keys.rs  log_streams.rs  migrations.rs  mod.rs  oidc.rs  org_settings.rs  organizations.rs  password_policy.rs  permissions.rs  rate_limits.rs  risk.rs  scim.rs  security.rs  sessions.rs  settings.rs  settings_v2.rs  sso.rs  tenant_admins.rs  users.rs  webhooks.rs
vault-server/src/routes/client/: auth.rs  consent.rs  m2m_auth.rs  mfa.rs  mod.rs  organizations.rs  push_mfa.rs  users.rs
vault-server/src/routes/internal/: api_keys.rs  audit_logs.rs  billing.rs  mod.rs  notifications.rs  organizations.rs  platform_users.rs  roles.rs  support.rs  tenant_admins.rs
vault-server/src/saml/: README.md  crypto.rs  handlers.rs  metadata.rs  mod.rs  validation.rs
vault-server/src/scim/: auth.rs  handlers.rs  mod.rs
vault-server/src/security/: bot_protection.rs  encryption.rs  geo.rs  mod.rs  password_policy.rs  session_binding.rs  session_binding_notifications.rs  tenant_keys.rs
vault-server/src/security/risk/: actions.rs  factors.rs  mod.rs
vault-server/src/settings/: mod.rs  models.rs  repository.rs  service.rs  validation.rs
vault-server/src/webhooks/: events.rs  mod.rs
vault-server/tests/: README.md  auth_flow_test.rs
vault-server/tests/common/: mod.rs
(+895 files in other folders)
