[package]
name = "fantasticauth-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "fantasticauth"
path = "src/main.rs"

[dependencies]
fantasticauth-core = { path = "../fantasticauth-core" }

# Async
tokio.workspace = true
async-trait.workspace = true

# CLI
clap.workspace = true
clap_complete.workspace = true
comfy-table.workspace = true
dialoguer.workspace = true
indicatif.workspace = true

# HTTP Client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml = "0.8"

# Time
chrono.workspace = true

# JWT
jsonwebtoken.workspace = true

# Configuration
dotenvy.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging & Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
dirs.workspace = true
url.workspace = true

# Encryption for secure credential storage
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
tokio-test.workspace = true
assert_fs.workspace = true
predicates.workspace = true
