[package]
name = "vault-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "vault"
path = "src/main.rs"

[dependencies]
vault-core = { path = "../vault-core" }

# Async
tokio.workspace = true

# CLI
clap.workspace = true
clap_complete.workspace = true
comfy-table.workspace = true
dialoguer.workspace = true
indicatif.workspace = true

# HTTP Client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
toml = "0.8"

# Configuration
dotenvy.workspace = true

# Error handling
anyhow.workspace = true

# Logging & Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
dirs.workspace = true
url.workspace = true

[dev-dependencies]
tokio-test.workspace = true
assert_fs.workspace = true
predicates.workspace = true
