[package]
name = "vault-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true

# Cryptography
pqcrypto-mlkem.workspace = true
pqcrypto-mldsa.workspace = true
pqcrypto-traits.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
ring.workspace = true
argon2.workspace = true
rand.workspace = true
rand_core.workspace = true
base64.workspace = true
hex.workspace = true
hmac.workspace = true
sha1.workspace = true
sha2.workspace = true
base32.workspace = true
p256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }
p521 = { version = "0.13", features = ["ecdsa"] }
rsa = { version = "0.9", features = ["sha2"] }
ciborium = "0.2"

# HTTP Client
reqwest.workspace = true
urlencoding.workspace = true

# JWT
jsonwebtoken.workspace = true

# Email
lettre.workspace = true

# Validation
validator.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utilities
url.workspace = true
regex = "1.10"
lazy_static.workspace = true
once_cell.workspace = true
async-trait.workspace = true

# Cache
redis.workspace = true

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
