[package]
name = "vault-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "vault-server"
path = "src/main.rs"

[features]
default = []
# stripe = ["async-stripe"]  # Disabled - async-stripe has compilation issues

[dependencies]
vault-core = { path = "../vault-core" }

# Async
tokio.workspace = true
tokio-util.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true

# Database
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true

# Cache
redis.workspace = true
dashmap.workspace = true

# Cryptography (for middleware)
base64.workspace = true

# JWT
jsonwebtoken.workspace = true

# Validation
validator.workspace = true

# Configuration
config.workspace = true
dotenvy.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging & Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true

# Utilities
time.workspace = true
url.workspace = true
regex.workspace = true
once_cell.workspace = true
async-trait.workspace = true
futures = "0.3"

# CSV parsing for bulk operations
csv = "1.3"

# Email
lettre.workspace = true

# OAuth
oauth2.workspace = true
openidconnect.workspace = true

# LDAP/Active Directory
ldap3 = "0.11"

# Webhook signing
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# HTTP client for webhooks
reqwest = { version = "0.12", features = ["json"] }

# i18n / Localization
fluent = { workspace = true }
intl-memoizer = { workspace = true }
unic-langid = { workspace = true }

# DNS resolution for domain verification
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }

# GeoIP lookup
maxminddb = { version = "0.24", features = ["mmap"] }

# Stripe integration (optional - disabled due to dependency issues)
# async-stripe = { version = "0.38", default-features = false, features = ["runtime-tokio-hyper-rustls", "checkout", "billing", "webhook-events"], optional = true }

# Web3 authentication (SIWE)
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha3 = "0.10"
ed25519-dalek = "2.1"
bs58 = "0.5"

[dev-dependencies]
tokio-test.workspace = true
wiremock.workspace = true

# Integration testing
reqwest = { version = "0.12", features = ["json"] }
http-body-util = "0.1"
tower-test = "0.4"

# Test utilities
fake = { version = "2.9", features = ["derive"] }
rand = "0.8"
