[package]
name = "example-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Vault Contributors"]
license = "MIT OR Apache-2.0"
description = "Example Vault plugin demonstrating the plugin API"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vault-core = { path = "../../vault-core" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
