[package]
name = "ldap-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Vault Contributors"]
license = "MIT OR Apache-2.0"
description = "LDAP/Active Directory integration plugin for Vault"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fantasticauth-core = { path = "../../fantasticauth-core" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread"] }
tracing = "0.1"

# LDAP client
ldap3 = { version = "0.11", default-features = false, features = ["tls"] }

# For LDAP attribute mapping
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
