[package]
name = "webhook-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Vault Contributors"]
license = "MIT OR Apache-2.0"
description = "Advanced webhook delivery plugin for Vault"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vault-core = { path = "../../vault-core" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "time"] }
tracing = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Webhook signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

# Rate limiting
dashmap = "5.5"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
